--- a/LidiaMadeTours/App.xaml
+++ b/LidiaMadeTours/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="TailorMadeTours.Net6._0.App"
+﻿<Application x:Class="LidiaMadeTours.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TailorMadeTours.Net6._0"
+             xmlns:local="clr-namespace:LidiaMadeTours"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
