Use databinding to present the data
In Tour Stops tab we'll display a list of data using data binding.
- ToursListBox.ItemsSource -  is data target
- TourSource.GetAllTourStops();  - is data source

--- a/LidiaMadeTours/MainWindow.xaml
+++ b/LidiaMadeTours/MainWindow.xaml
@@ -18,9 +18,7 @@
                    FontWeight="Bold" />
         <TabControl MinHeight="680">
             <TabItem Header="Tour Stops">
-                <Grid Background="#FFE5E5E5">
-                   
-                </Grid>
+                <views:TourStopsView />
             </TabItem>
             <TabItem Header="Details">
                 <views:DetailView />
