--- a/LidiaMadeTours/App.xaml
+++ b/LidiaMadeTours/App.xaml
@@ -4,6 +4,88 @@
              xmlns:local="clr-namespace:LidiaMadeTours"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <DataTemplate x:Key="TourTemplate">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="6*" />
+                    <ColumnDefinition Width="1*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="12" />
+                </Grid.RowDefinitions>
+                <TextBlock FontSize="40"
+                           Text="{Binding StopNumber}"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Top"
+                           TextAlignment="Right"
+                           Grid.Row="0"
+                           Grid.RowSpan="3"
+                           Grid.Column="0" />
+                <Ellipse StrokeThickness="3"
+                         Width="60"
+                         Height="60"
+                         Stroke="Gray"
+                         Grid.Row="0"
+                         Grid.RowSpan="3"
+                         Grid.Column="0"
+                         VerticalAlignment="Top"
+                         HorizontalAlignment="Center" />
+                <Image Source="{Binding ImageUri}"
+                       Width="140"
+                       Height="120"
+                       MaxWidth='380'
+                       Stretch='UniformToFill'
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Top"
+                       Grid.Row="0"
+                       Grid.Column="1"
+                       Grid.RowSpan="3"
+                       Margin="6,3" />
+                <TextBlock Text="{Binding Name}"
+                           FontSize="18"
+                           FontWeight="Bold"
+                           Grid.Row="0"
+                           Grid.Column="2"
+                           TextAlignment="Left"
+                           MaxWidth="380"
+                           Padding="10" />
+                <TextBlock Text="{Binding Description}"
+                           FontSize="14"
+                           Grid.Row="1"
+                           Grid.Column="2"
+                           Grid.RowSpan="1"
+                           TextWrapping="Wrap"
+                           MaxWidth="320"
+                           Padding="10" />
+                <StackPanel Grid.Row="0"
+                            Grid.Column="3"
+                            Grid.RowSpan="3"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Top"
+                            Margin="0,0,0,0"
+                            MinWidth="90">
+                    <Button Content="Map"
+                            Padding="3"
+                            HorizontalAlignment="Right"
+                            Margin="3"
+                            MinWidth="90" />
+                    <Button Content="{Binding Phone}"
+                            Padding="3"
+                            Margin="3"
+                            HorizontalAlignment="Right"
+                            MinWidth="90" />
+                    <CheckBox Content="Add to Tour"
+                              Padding="3"
+                              Margin="3"
+                              HorizontalAlignment="Right"
+                              MinWidth="90" />
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
     </Application.Resources>
 </Application>
