--- a/LidiaMadeTours/UserControls/TourStopsView.xaml
+++ b/LidiaMadeTours/UserControls/TourStopsView.xaml
@@ -7,19 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <ListBox x:Name="ToursListBox">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <Image MinWidth='300'
-                               Stretch='UniformToFill'
-                               Source="{Binding ImageUri}" />
-                        <TextBlock Text="{Binding Name}"
-                                   VerticalAlignment="Center"
-                                   Margin="20"/>
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
+        <ListBox x:Name="ToursListBox"
+                 ItemTemplate="{StaticResource TourTemplate}">
         </ListBox>
     </Grid>
 </UserControl>
