--- a/LidiaMadeTours/MainWindow.xaml
+++ b/LidiaMadeTours/MainWindow.xaml
@@ -25,7 +25,7 @@
                 <views:DetailView />
             </TabItem>
             <TabItem Header="Weekly Calendar">
-                <Grid Background="Azure" />
+                <views:ScheduleView />
             </TabItem>
         </TabControl>
     </StackPanel>
