New tab for Control Templates Demo
- Adding simple buttons with default template

--- a/LidiaMadeTours/MainWindow.xaml
+++ b/LidiaMadeTours/MainWindow.xaml
@@ -27,6 +27,9 @@
             <TabItem Header="Weekly Calendar">
                 <views:ScheduleView />
             </TabItem>
+            <TabItem Header="Control Templates Demo">
+                <views:ControlTemplatesDemo />
+            </TabItem>
         </TabControl>
     </StackPanel>
 </Window>
