Demo for Custom 3D Model Control template

--- a/LidiaMadeTours/UserControls/ControlTemplatesDemo.xaml
+++ b/LidiaMadeTours/UserControls/ControlTemplatesDemo.xaml
@@ -14,13 +14,27 @@
                    FontSize='18'
                    Text="Result" />
         <Canvas>
-            <Button Width="250"
+            <TextBlock Text="The default template for the control"
+                       Canvas.Left="21"
+                       Canvas.Top="295"
+                       HorizontalAlignment="Left"
+                       Height="36"
+                       VerticalAlignment="Center"></TextBlock>
+            <Button Style='{x:Null}'
+                    Width="250"
                     Height="250"
                     Canvas.Top="30"
                     Canvas.Left="20"
                     Name="SaveButton"
                     Content='Save'
                     Click="SaveButton_Click" />
+            <TextBlock Text="A 3D Model custom template defined in App.xml resources"
+                       Canvas.Left="249"
+                       Canvas.Top="321"
+                       HorizontalAlignment="Left"
+                       Height="30"
+                       VerticalAlignment="Top"
+                       Width="322"></TextBlock>
             <Button Width="250"
                     Height="250"
                     Canvas.Top="30"
@@ -28,7 +42,13 @@
                     Name="OkButton"
                     Content='OK'
                     Click="OkButton_Click" />
-            <Button Width="250"
+            <TextBlock Text="The default template for the control"
+                       Canvas.Left="544"
+                       Canvas.Top="295"
+                       HorizontalAlignment="Left"
+                       VerticalAlignment="Center"></TextBlock>
+            <Button Style='{x:Null}'
+                    Width="250"
                     Height="250"
                     Canvas.Top="30"
                     Canvas.Left="540"
