--- a/LidiaMadeTours/App.xaml
+++ b/LidiaMadeTours/App.xaml
@@ -87,5 +87,121 @@
                 </StackPanel>
             </Grid>
         </DataTemplate>
+        <Style TargetType="{x:Type Button}">
+            <Style.Resources>
+                <Storyboard x:Key="Spin">
+                    <DoubleAnimation Storyboard.TargetName="CubeRotation"
+                                     Storyboard.TargetProperty="Angle"
+                                     Duration="0:0:2"
+                                     From="0"
+                                     To="380"
+                                     DecelerationRatio="1.0" />
+                    <DoubleAnimation Storyboard.TargetName="CubeRotation"
+                                     Storyboard.TargetProperty="Angle"
+                                     Duration="0:0:2"
+                                     BeginTime="0:0:2"
+                                     From="380"
+                                     To="360"
+                                     DecelerationRatio="1.0" />
+                    <!--<DoubleAnimation
+            Storyboard.TargetName="CubeRotationY"
+            Storyboard.TargetProperty="Angle"
+            Duration="0:0:3" From="0" To="360"  BeginTime="0:0:4"/>-->
+                </Storyboard>
+            </Style.Resources>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="Button.IsPressed"
+                                     Value="true">
+                                <Trigger.EnterActions>
+                                    <BeginStoryboard Storyboard="{StaticResource Spin}" />
+                                </Trigger.EnterActions>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                        <Viewport3D>
+                            <Viewport3D.Camera>
+                                <PerspectiveCamera Position="4,4,4"
+                                                   LookDirection="-1,-1,-1" />
+                            </Viewport3D.Camera>
+                            <Viewport3D.Children>
+                                <ModelVisual3D>
+                                    <ModelVisual3D.Content>
+                                        <Model3DGroup>
+                                            <!--<DirectionalLight Direction="-0.3,-0.4,-0.5" />-->
+                                            <AmbientLight Color="#555555" />
+                                            <SpotLight Color="Yellow"
+                                                       Position="2,2,2"
+                                                       Direction="-1,-1,-1"
+                                                       InnerConeAngle="30"
+                                                       OuterConeAngle="60" />
+                                            <SpotLight Color="Orange"
+                                                       Position="-2,2,2"
+                                                       Direction="1,-1,-1"
+                                                       InnerConeAngle="30"
+                                                       OuterConeAngle="60" />
+                                            <SpotLight Color="Purple"
+                                                       Position="2,-2,2"
+                                                       Direction="-1,1,-1"
+                                                       InnerConeAngle="40"
+                                                       OuterConeAngle="60" />
+                                        </Model3DGroup>
+                                    </ModelVisual3D.Content>
+                                </ModelVisual3D>
+                                <ModelVisual3D x:Name="Cube">
+                                    <ModelVisual3D.Transform>
+                                        <Transform3DGroup>
+                                            <RotateTransform3D>
+                                                <RotateTransform3D.Rotation>
+                                                    <AxisAngleRotation3D x:Name="CubeRotation"
+                                                                         Axis="0,1,0"
+                                                                         Angle="0" />
+                                                </RotateTransform3D.Rotation>
+                                            </RotateTransform3D>
+                                            <RotateTransform3D>
+                                                <RotateTransform3D.Rotation>
+                                                    <AxisAngleRotation3D x:Name="CubeRotationY"
+                                                                         Axis="1,0,0"
+                                                                         Angle="0" />
+                                                </RotateTransform3D.Rotation>
+                                            </RotateTransform3D>
+                                        </Transform3DGroup>
+                                    </ModelVisual3D.Transform>
+                                    <ModelVisual3D.Content>
+                                        <GeometryModel3D x:Name="OB_Cube">
+                                            <GeometryModel3D.Material>
+                                                <MaterialGroup>
+                                                    <DiffuseMaterial>
+                                                        <DiffuseMaterial.Brush>
+                                                            <VisualBrush ViewportUnits="Absolute"
+                                                                         Transform="1,0,0,-1,0,1">
+                                                                <VisualBrush.Visual>
+                                                                    <Border Background="{Binding Path=Background, RelativeSource='{RelativeSource TemplatedParent}'}">
+                                                                        <Label Content="{Binding Path=Content, RelativeSource='{RelativeSource TemplatedParent}'}" />
+                                                                    </Border>
+                                                                </VisualBrush.Visual>
+                                                            </VisualBrush>
+                                                        </DiffuseMaterial.Brush>
+                                                    </DiffuseMaterial>
+                                                    <SpecularMaterial Color="White"
+                                                                      SpecularPower="10" />
+                                                </MaterialGroup>
+                                            </GeometryModel3D.Material>
+                                            <GeometryModel3D.Geometry>
+                                                <MeshGeometry3D x:Name="ME_Cube"
+                                                                Positions="1,1,-1 1,-1,-1 -1,-1,-1 -1,1,-1 1,1,1 -1,1,1 -1,-1,1 1,-1,1 1,1,-1 1,1,1 1,-1,1 1,-1,-1 1,-1,-1 1,-1,1 -1,-1,1 -1,-1,-1 -1,-1,-1 -1,-1,1 -1,1,1 -1,1,-1 1,1,1 1,1,-1 -1,1,-1 -1,1,1"
+                                                                TriangleIndices="0 1 2 0 2 3 4 5 6 4 6 7 8 9 10 8 10 11 12 13 14 12 14 15 16 17 18 16 18 19 20 21 22 20 22 23"
+                                                                TextureCoordinates="0,1 0,0 1,0 1,1 1,1 -0,1 0,-0 1,0 1,1 -0,1 0,-0 1,0 1,0 1,1 -0,1 0,-0 -0,0 1,-0 1,1 0,1 1,-0 1,1 0,1 -0,0" />
+                                            </GeometryModel3D.Geometry>
+                                        </GeometryModel3D>
+                                    </ModelVisual3D.Content>
+                                </ModelVisual3D>
+                            </Viewport3D.Children>
+                        </Viewport3D>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 </Application>
