--- a/LidiaMadeTours/App.xaml
+++ b/LidiaMadeTours/App.xaml
@@ -203,5 +203,223 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <ControlTemplate TargetType="Button"
+                         x:Key="glassButton">
+            <Canvas Width="150"
+                    Height="150">
+                <!-- Drop shadow -->
+                <Ellipse Height="146"
+                         Width="146"
+                         Canvas.Left="0"
+                         Canvas.Top="0"
+                         Stretch="Fill"
+                         Stroke="Transparent">
+                    <Ellipse.Fill>
+                        <RadialGradientBrush x:Name="shadowBrush"
+                                             RadiusX="0.5"
+                                             RadiusY="0.5"
+                                             Center="0.5,0.5"
+                                             GradientOrigin="0.5,0.5">
+                            <RadialGradientBrush.RelativeTransform>
+                                <TransformGroup />
+                            </RadialGradientBrush.RelativeTransform>
+                            <GradientStop x:Name="shadowColor"
+                                          Color="Black"
+                                          Offset="0.7" />
+                            <GradientStop Color="Transparent"
+                                          Offset="1" />
+                        </RadialGradientBrush>
+                    </Ellipse.Fill>
+                </Ellipse>
+                <!-- White button surround -->
+                <Ellipse Height="116"
+                         Width="116"
+                         Canvas.Left="12"
+                         Canvas.Top="12"
+                         Stretch="Fill"
+                         Stroke="Gray">
+                    <Ellipse.Fill>
+                        <SolidColorBrush x:Name="ButtonFill"
+                                         Color="White" />
+                    </Ellipse.Fill>
+                </Ellipse>
+                <!-- Black button background -->
+                <Ellipse Height="100"
+                         Width="100"
+                         Canvas.Left="20"
+                         Canvas.Top="20"
+                         Stretch="Fill"
+                         Stroke="Gray">
+                    <Ellipse.Fill>
+                        <SolidColorBrush Color="Black" />
+                    </Ellipse.Fill>
+                </Ellipse>
+                <!-- Main background color -->
+                <Ellipse x:Name="ButtonColor"
+                         Height="100"
+                         Width="100"
+                         Canvas.Left="20"
+                         Canvas.Top="20"
+                         Stretch="Fill"
+                         Stroke="Gray">
+                    <Ellipse.Fill>
+                        <SolidColorBrush Color="Green" />
+                    </Ellipse.Fill>
+                    <Ellipse.Clip>
+                        <EllipseGeometry RadiusX="50"
+                                         RadiusY="50"
+                                         Center="50,50"
+                                         x:Name="ButtonColorClip" />
+                    </Ellipse.Clip>
+                </Ellipse>
+                <!-- Top glow -->
+                <Ellipse x:Name="TopGlow"
+                         Height="78"
+                         Width="78"
+                         Canvas.Left="31"
+                         Canvas.Top="21"
+                         Stretch="Fill"
+                         Stroke="Transparent">
+                    <Ellipse.Fill>
+                        <LinearGradientBrush StartPoint="0.5,0"
+                                             EndPoint="0.5,1">
+                            <GradientStop Color="#B0FFFFFF"
+                                          Offset="0" />
+                            <GradientStop Color="#60FFFFFF"
+                                          Offset="0.3" />
+                            <GradientStop Color="#2AFFFFFF"
+                                          Offset="0.55" />
+                            <GradientStop Color="Transparent"
+                                          Offset="0.88" />
+                        </LinearGradientBrush>
+                    </Ellipse.Fill>
+                    <Ellipse.RenderTransform>
+                        <TranslateTransform X="0"
+                                            x:Name="TopGlowTranslate" />
+                    </Ellipse.RenderTransform>
+                </Ellipse>
+                <!-- Bottom glow -->
+                <Ellipse x:Name="BottomGlow"
+                         Height="98"
+                         Width="98"
+                         Canvas.Left="21"
+                         Canvas.Top="21"
+                         Stretch="Fill"
+                         Stroke="Transparent">
+                    <Ellipse.Fill>
+                        <RadialGradientBrush RadiusX="3"
+                                             RadiusY="1"
+                                             Center="0.5,0.5"
+                                             GradientOrigin="0.5,1">
+                            <RadialGradientBrush.RelativeTransform>
+                                <TransformGroup />
+                            </RadialGradientBrush.RelativeTransform>
+                            <GradientStop Color="#50FFFFFF"
+                                          Offset="0" />
+                            <GradientStop Color="Transparent"
+                                          Offset="0.25" />
+                        </RadialGradientBrush>
+                    </Ellipse.Fill>
+                    <Ellipse.RenderTransform>
+                        <TranslateTransform X="0"
+                                            x:Name="BottomGlowTranslate" />
+                    </Ellipse.RenderTransform>
+                    <Ellipse.Clip>
+                        <EllipseGeometry RadiusX="50"
+                                         RadiusY="50"
+                                         Center="50,50" />
+                    </Ellipse.Clip>
+                </Ellipse>
+                <!-- Hover-over glow-->
+                <Ellipse x:Name="HoverGlow"
+                         Height="98"
+                         Width="98"
+                         Canvas.Left="21"
+                         Canvas.Top="21"
+                         Stretch="Fill"
+                         Stroke="Transparent"
+                         Opacity="0">
+                    <Ellipse.Fill>
+                        <RadialGradientBrush RadiusX="1.2"
+                                             RadiusY="0.8"
+                                             Center="0.5,0.5"
+                                             GradientOrigin="0.5,0.5">
+                            <GradientStop Color="Yellow"
+                                          Offset="0" />
+                            <GradientStop Color="YellowGreen"
+                                          Offset="0.25" />
+                            <GradientStop Color="Transparent"
+                                          Offset="0.8" />
+                        </RadialGradientBrush>
+                    </Ellipse.Fill>
+                    <Ellipse.Clip>
+                        <EllipseGeometry RadiusX="49"
+                                         RadiusY="49"
+                                         Center="50,50" />
+                    </Ellipse.Clip>
+                </Ellipse>
+                <!-- Transparent shape to catch mouse events -->
+                <Ellipse x:Name="button"
+                         Height="116"
+                         Width="116"
+                         Canvas.Left="12"
+                         Canvas.Top="12"
+                         Stretch="Fill">
+                    <Ellipse.Fill>
+                        <SolidColorBrush Color="Transparent" />
+                    </Ellipse.Fill>
+                </Ellipse>
+            </Canvas>
+            <ControlTemplate.Triggers>
+                <EventTrigger RoutedEvent="Button.MouseEnter">
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <!-- Animation to fire when to mouse is hovering over the button -->
+                            <Storyboard x:Name="HoverAnimation">
+                                <DoubleAnimation Storyboard.TargetName="HoverGlow"
+                                                 Storyboard.TargetProperty="Opacity"
+                                                 From="0.0"
+                                                 To="01"
+                                                 Duration="0:0:2" />
+                                <PointAnimation Storyboard.TargetName="shadowBrush"
+                                                Storyboard.TargetProperty="Center"
+                                                From="0.5,0.5"
+                                                To="0.55,0.55"
+                                                Duration="0:0:2" />
+                                <ColorAnimation Storyboard.TargetName="shadowColor"
+                                                Storyboard.TargetProperty="Color"
+                                                From="Black"
+                                                To="Orange"
+                                                Duration="0:0:2" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
+                <EventTrigger RoutedEvent="Button.MouseLeave">
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <!-- Animation to fire when to mouse is not hovering over the button -->
+                            <Storyboard x:Name="hoverLeaveAnimation">
+                                <DoubleAnimation Storyboard.TargetName="HoverGlow"
+                                                 Storyboard.TargetProperty="Opacity"
+                                                 From="01"
+                                                 To="0"
+                                                 Duration="0:0:1" />
+                                <PointAnimation Storyboard.TargetName="shadowBrush"
+                                                Storyboard.TargetProperty="Center"
+                                                From="0.55,0.55"
+                                                To="0.5,0.5"
+                                                Duration="0:0:1" />
+                                <ColorAnimation Storyboard.TargetName="shadowColor"
+                                                Storyboard.TargetProperty="Color"
+                                                From="Orange"
+                                                To="Black"
+                                                Duration="0:0:1" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
     </Application.Resources>
 </Application>
